[package]
authors = ["fantasyzhjk <fantasyzhjk@outlook.com>"]
name = "tokio-bincodec"
version = "0.1.0"
edition = "2021"
description = "A fork of `tokio-bincode`"
keywords = ["networking", "bincode", "futures"]
categories = ["network-programming", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
bytes = "1.3"
serde = "1.0"
tokio-util = { version = "0.7.4", features = ["codec"] }

[dev-dependencies]
tokio-stream = "0.1.11"
serde_derive = "1.0.147"
tokio = { version = "1.22.0", features = ["full"] }
futures = "0.3"
